--- a/index.haml
+++ b/index.haml
@@ -35,6 +35,7 @@
     %ul
       - associations.sort.map do |key,value|
         %li
-          = key
+          %a{:href => "http://s3.amazonaws.com/loebolus/#{key}.pdf"}
+            #{key} - #{value['title']}
     %small
       By downloading any of these files, you agree that you have verified that it is legal to do so from your territory. If you believe you are the copyright holder on any of these files and that they are <strong>not</strong> in the public domain in the United States, please <a href='mailto:ryan.baumann@gmail.com'>contact me</a>.
