Link to RDF from index

--- a/index.haml
+++ b/index.haml
@@ -3,6 +3,7 @@
   %head
     %meta{:charset => 'utf-8'}
     %title Loebolus
+    %link{:rel => 'alternate', :type => 'application/rdf+xml', :href => 'index.rdf'}
     %link{:rel => 'stylesheet', :type => 'text/css', :href => 'http://fonts.googleapis.com/css?family=EB+Garamond'}
     :css
       body {
