Move zip off S3 for now (cherry picked from commit 20cc7712360ece7c7d6aaded0cb4e09cca2580e2)
Conflicts:
	index.html

--- a/index.haml
+++ b/index.haml
@@ -30,7 +30,7 @@
       by re-hosting the PDF's directly, without the need to enter CAPTCHA's.
     %p
       You can also download
-      %a{:href => 'http://s3.amazonaws.com/loebolus/loebolus.zip'}
+      %a{:href => 'http://rfbaumann.com/loebolus.zip'}
         a .zip containing all #{associations.keys.length} PDF's
       (3.2GB).
       Or
