--- a/index.haml
+++ b/index.haml
@@ -6,6 +6,9 @@
     %link{:rel => 'alternate', :type => 'application/rdf+xml', :href => 'index.rdf'}
     %link{:rel => 'stylesheet', :type => 'text/css', :href => 'http://fonts.googleapis.com/css?family=EB+Garamond'}
     :css
+      h1, h2, h3, h4 {
+        font-family:'Palatino', 'EB Garamond', serif;
+      }
       body {
         font-family:'EB Garamond', serif;
         margin: 80px auto;
