--- a/index.haml
+++ b/index.haml
@@ -25,6 +25,9 @@
       }
     :javascript
       var _gaq = _gaq || [];
+      var pluginUrl =
+       '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
+      _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
       _gaq.push(['_setAccount', 'UA-32373168-1']);
       _gaq.push(['_trackPageview']);
       (function() {
