--- a/index.haml
+++ b/index.haml
@@ -4,7 +4,7 @@
     %meta{:charset => 'utf-8'}
     %title Loebolus
     %link{:rel => 'alternate', :type => 'application/rdf+xml', :href => 'index.rdf'}
-    %link{:rel => 'stylesheet', :type => 'text/css', :href => 'http://fonts.googleapis.com/css?family=EB+Garamond'}
+    %link{:rel => 'stylesheet', :type => 'text/css', :href => 'https://fonts.googleapis.com/css?family=EB+Garamond'}
     :css
       h1, h2, h3, h4 {
         font-family:'Palatino', 'EB Garamond', serif;
