--- a/index.haml
+++ b/index.haml
@@ -49,7 +49,7 @@
       by re-hosting the PDF's directly, without the need to enter CAPTCHA's.
     %p
       You can also download
-      %a{:href => 'https://github.com/ryanfb/loebolus-data/archive/master.zip', :onclick => "trackOutboundLink('https://github.com/ryanfb/loebolus-data/archive/master.zip'); return false;"}
+      %a{:href => 'https://github.com/ryanfb/loebolus-data/archive/gh-pages.zip', :onclick => "trackOutboundLink('https://github.com/ryanfb/loebolus-data/archive/gh-pages.zip'); return false;"}
         a .zip containing all #{associations.keys.length} PDF's
       (3.2GB).
       Or
@@ -58,7 +58,7 @@
     %ul
       - associations.sort.map do |key,value|
         %li
-          %a{:href => "http://ryanfb.github.io/loebolus-data/#{key}.pdf", :onclick => "trackOutboundLink('http://ryanfb.github.io/loebolus-data/#{key}.pdf'); return false;"}
+          %a{:href => "https://ryanfb.github.io/loebolus-data/#{key}.pdf", :onclick => "trackOutboundLink('https://ryanfb.github.io/loebolus-data/#{key}.pdf'); return false;"}
             #{key} - #{value['title']}
     %small
       By downloading any of these files, you agree that you have verified that it is legal to do so from your territory. If you believe you are the copyright holder on any of these files and that they are <strong>not</strong> in the public domain in the United States, please <a href='mailto:ryan.baumann@gmail.com' onclick="trackOutboundLink('mailto:ryan.baumann@gmail.com'); return false;">contact me</a>. Note that for works published or with a copyright notice between 1923 and 1963 and linked from here, I have attempted to verify that there has been no <a href='http://collections.stanford.edu/copyrightrenewals/' onclick="trackOutboundLink('http://collections.stanford.edu/copyrightrenewals/'); return false;">copyright renewal</a> and that the work is not covered by GATT, allowing the work to fall into the public domain in the United States.
