--- a/index.haml
+++ b/index.haml
@@ -4,8 +4,53 @@
     %meta{:charset => 'utf-8'}
     %title Loebolus
     %link{:rel => 'alternate', :type => 'application/rdf+xml', :href => 'index.rdf'}
-    %link{:rel => 'stylesheet', :type => 'text/css', :href => 'https://fonts.googleapis.com/css?family=EB+Garamond'}
     :css
+      @font-face {
+        font-family: 'EB Garamond';
+        font-style: normal;
+        font-weight: 400;
+        src: url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-regular.eot'); /* IE9 Compat Modes */
+        src: local('EB Garamond Regular'), local('EBGaramond-Regular'),
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-regular.woff2') format('woff2'), /* Super Modern Browsers */
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-regular.woff') format('woff'), /* Modern Browsers */
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-regular.svg#EBGaramond') format('svg'); /* Legacy iOS */
+      }
+
+      /* eb-garamond-italic - latin */
+      @font-face {
+        font-family: 'EB Garamond';
+        font-style: italic;
+        font-weight: 400;
+        src: url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-italic.eot'); /* IE9 Compat Modes */
+        src: local('EB Garamond Italic'), local('EBGaramond-Italic'),
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-italic.woff2') format('woff2'), /* Super Modern Browsers */
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-italic.woff') format('woff'), /* Modern Browsers */
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-italic.svg#EBGaramond') format('svg'); /* Legacy iOS */
+      }
+
+      /* eb-garamond-700 - latin */
+      @font-face {
+        font-family: 'EB Garamond';
+        font-style: normal;
+        font-weight: 700;
+        src: url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-700.eot'); /* IE9 Compat Modes */
+        src: local('EB Garamond Bold'), local('EBGaramond-Bold'),
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-700.woff2') format('woff2'), /* Super Modern Browsers */
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-700.woff') format('woff'), /* Modern Browsers */
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-700.ttf') format('truetype'), /* Safari, Android, iOS */
+             url('assets/fonts/eb-garamond-v9-greek_latin_greek-ext-700.svg#EBGaramond') format('svg'); /* Legacy iOS */
+      }
+      li.greek::before {
+        content: '📗 ';
+      }
+      li.latin::before {
+        content: '📕 ';
+      }
       h1, h2, h3, h4 {
         font-family:'Palatino', 'EB Garamond', serif;
       }
@@ -23,14 +68,6 @@
       a:hover {
         border-bottom: 1px solid black;
       }
-    :javascript
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-32373168-1', 'auto');
-      ga('send', 'pageview');
   %body
     %h1 Loebolus
     %p
@@ -49,7 +86,7 @@
         view the code used for generating this site on GitHub.
     %ul
       - associations.sort.map do |key,value|
-        %li
+        %li{:class => value['language']}
           %a{:href => "https://ryanfb.github.io/loebolus-data/#{key}.pdf"}
             #{key} - #{value['title']}
     %small
