Add key, link to info about Loebs

--- a/index.haml
+++ b/index.haml
@@ -74,8 +74,18 @@
       Loebolus is based on
       %a{:href => 'http://www.edonnelly.com/loebs.html'}
         Edwin Donnelly's “Downloebables”
-      , aiming to make all the public domain Loebs more easily downloadable
+      , aiming to make
+      %a{:href => 'https://en.wikipedia.org/wiki/Loeb_Classical_Library'}
+        all the public domain Loebs
+      more easily downloadable
       by re-hosting the PDF's directly, without the need to enter CAPTCHA's.
+    %p
+      Key:
+      %ul{:style => 'list-style-type: none;'}
+        %li{:class => 'greek'}
+          Greek
+        %li{:class => 'latin'}
+          Latin
     %p
       You can also download
       %a{:href => 'https://github.com/ryanfb/loebolus-data/archive/gh-pages.zip'}
